--- a/picom.conf
+++ b/picom.conf
@@ -171,7 +171,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # The name of the switch may change without prior notifications.
 #
 # blur-background = false
-
+blur-background = true
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
 #    blur-background 
